alteração de link
alteração do link github e instagram

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <p>Sou apaixonado por tecnologia em busca de constante evolução</p>
 
         <div class="menu">
-            <a href="https://www.instagram.com/paulojr_cenaculodeamor">Instagram</a>
+            <a href="https://www.instagram.com/paulojr_desenvolvedorfrontend">Instagram</a>
             <a href="htpps://linkedin.com/">linkedin</a>
-            <a href="htpps://github.com">Github</a>
+            <a href="https://github.com/PauloJr-web">Github</a>
             <a href="htpps://wa.me/5521994258327">whatsapp</a>
         </div>
 
